Rename ANDROUNDDA.HTML und NELKEN.HTML.

--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -115,7 +115,7 @@ td {vertical-align:center; overflow:hidden; }
     <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
 	<tbody><tr>
 	 <td width="678" height="150" bgcolor="#44aa00">
-          <p align="center"><font size="4" face="Arial"><a href="ANDROUNDDA.HTML">
+          <p align="center"><font size="4" face="Arial"><a href="androundda.html">
 		Androsace und Daphne</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#44aa00">
@@ -127,7 +127,7 @@ td {vertical-align:center; overflow:hidden; }
 <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
 	<tbody><tr>
 	 <td width="678" height="150" bgcolor="#337711">
-          <p align="center"><font size="4" face="Arial"><a href="NELKEN.HTML">
+          <p align="center"><font size="4" face="Arial"><a href="nelken.html">
 		Nelken</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#337711">
