--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -157,7 +157,7 @@ Cistus albidus aus dem westlichen Mittelmeerraum mit weißfilzigen Blättern äh
 		</font></p></td>
 	<td width="169" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
-		 <img src="Cistus-albidus.JPG" width="300" height="277" align="right">  
+		 <img src="cistus-albidus.jpg" width="300" height="277" align="right">  
 		</p></td>
 	        </tr>
 </tbody></table>
