--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <tr>
             <td colspan="2" width="100%" bgcolor=#009900">
               <p align="middle" style="margin-right: 10px;">
-                <font size="6" face="Monotype Corsiva"> Der Steingärtner
+                <font size="6" face="Monotype Corsiva">
+				  Der Steingärtner - Juhu!
                 </font>
               </p></td>
           </tr>
