--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <td colspan="2" width="100%" bgcolor=#009900">
               <p align="middle" style="margin-right: 10px;">
                 <font size="6" face="Monotype Corsiva">
-				  Der Steingärtner - Juhu!
+				  Der Steingärtner
                 </font>
               </p></td>
           </tr>
