--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <html>
-  <head>
-    <meta http-equiv="Content-Language" content="de">
-    <meta name="keywords" lang="de" content="Garten, Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf">
-    <meta name="description" lang="de" content="Christophs Pflanzenparadies.Verkaufsliste für Steingartenpflanzen,Mediterrane,Raritaeten, Dr. Christoph Rohlfs">
-    <style type="text/css" media="all">.imgstyle { position:absolute; visibility:visible; top:-150px; }
-    </style>
-    <title> Der Steingärtner
-    </title>
-  </head>
-  <body background="images/Cyclamen-hederifolium.JPG"text="#99cc33" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50">
+<head>
+  <meta http-equiv="Content-Language" content="de">
+  <meta name="keywords" lang="de" content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf">
+  <meta name="description" lang="de" content="Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs">
+  <style type="text/css" media="all">
+  .imgstyle {
+    position: absolute;
+    visibility: visible;
+    top: -150px;
+  }
+</style>
+<title>Der Steingärtner</title>
+</head>
+<body background="images/Cyclamen-hederifolium.JPG"
+      text="#99cc33" link="#ffcc99" vlink="#ffcc99" alink="#ffffff"
+      leftmargin="30" topmargin="50">
     <div id="uebersicht" align="center">
       <table border="0" width="500" cellspacing="0" cellpadding="20">
         <tbody>
@@ -16,9 +22,10 @@
             <td colspan="2" width="100%" bgcolor=#009900">
               <p align="middle" style="margin-right: 10px;">
                 <font size="6" face="Monotype Corsiva">
-				  Der Steingärtner
+          Der Steingärtner
                 </font>
-              </p></td>
+              </p>
+      </td>
           </tr>
           <tr>
             <td colspan="2" width="100%" bgcolor="#007700">
@@ -37,29 +44,24 @@
               <p align="left" style="margin-right: 10px;">
                 <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
                 </font>
-              </p></td>
+              </p>
+      </td>
           </tr>
           <tr>
             <td width="50%" height="200" bgcolor="#448800">
               <p align="center">
                 <font size="4" face="Arial">
-                  <a href="Tipsneu.html">
-                    <!--b--> Tips, Tricks und Pflegeanleitungen
-                    <!--/b--></a>
+                  <a href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
                 </font>
               </p></td>
             <td width="50%" height="200" bgcolor="#00aa11">
               <p align="center">
                 <font size="4" face="Arial">
-                  <a href="Fotostartseiteneu.html">
-                    <!--b--> Fotos
-                    <!--/b--></a>
-                  <!--p-->
+                  <a href="Fotostartseiteneu.html">Fotos</a>
                 </font>
                 <br>
                 <font face="Arial" size="2">
-                  <!--b--> Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
-                  <!--/b-->
+                  Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
                   <br>
                 </font>
               </p></td>
@@ -68,23 +70,16 @@
             <td width="50%" height="200" bgcolor="#44aa00">
               <p align="center">
                 <font size="4" face="Arial">
-                  <a href="Kontaktneu.html">
-                    Kontakt, Impressum, Datenschutz
-                    </a>
+                  <a href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
                 </font>
               </p></td>
             <td width="50%" height="200" bgcolor="#337711">
               <p align="center">
                 <font size="4" face="Arial">
-                  <a href="preisliste.html">
-                    <!--b--> Bestellung
-                    <!--/b--></a>
-                  <!--p-->
+                  <a href="preisliste.html">Bestellung</a>
                 </font>
                 <br>
-                <font face="Arial" size="2">
-                  <!--b--> Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
-                  <!--/b-->
+                <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
                   <br>
                 </font>
               </p></td>
