index.html styles

--- a/index.html
+++ b/index.html
@@ -9,91 +9,118 @@
     visibility: visible;
     top: -150px;
   }
+  body {
+    background-image: url("images/Cyclamen-hederifolium.JPG");
+    margin: 50px 30px;
+  }
+  body, p, td {
+    color: #99cc33;
+    font: 16px sans-serif;
+  }
+  .title {
+    font: 24px sans-serif;
+    text-align: center;
+    background-color: #009900;
+  }
+  a:link {
+    color: #ffcc99;
+  }
+  a:visited {
+    color: #ffcc99;
+  }
+  a:active {
+    color: #ffffff;
+  }
+  table {
+    border: 0px;
+    width: 500px;
+    border-spacing: 0px;
+  }
+  td {
+    padding: 20px;
+  }
 </style>
 <title>Der Steingärtner</title>
 </head>
-<body background="images/Cyclamen-hederifolium.JPG"
-      text="#99cc33" link="#ffcc99" vlink="#ffcc99" alink="#ffffff"
-      leftmargin="30" topmargin="50">
-    <div id="uebersicht" align="center">
-      <table border="0" width="500" cellspacing="0" cellpadding="20">
-        <tbody>
-          <tr>
-            <td colspan="2" width="100%" bgcolor=#009900">
-              <p align="middle" style="margin-right: 10px;">
-                <font size="6" face="Monotype Corsiva">
-          Der Steingärtner
-                </font>
-              </p>
-      </td>
-          </tr>
-          <tr>
-            <td colspan="2" width="100%" bgcolor="#007700">
-              <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Willkommen auf meiner Homepage!
-                </font>
-              </p>
-              <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.
-                </font>
-              </p>
-              <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs
-                </font>
-              </p>
-              <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
-                </font>
-              </p>
-      </td>
-          </tr>
-          <tr>
-            <td width="50%" height="200" bgcolor="#448800">
-              <p align="center">
-                <font size="4" face="Arial">
-                  <a href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
-                </font>
-              </p></td>
-            <td width="50%" height="200" bgcolor="#00aa11">
-              <p align="center">
-                <font size="4" face="Arial">
-                  <a href="Fotostartseiteneu.html">Fotos</a>
-                </font>
+<body>
+  <div id="uebersicht" align="center">
+    <table>
+      <tbody>
+        <tr>
+          <td class="title" colspan="2">Der Steingärtner</td>
+        </tr>
+        <tr>
+          <td colspan="2" width="100%" bgcolor="#007700">
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Willkommen auf meiner Homepage!
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td width="50%" height="200" bgcolor="#448800">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
+              </font>
+            </p>
+          </td>
+          <td width="50%" height="200" bgcolor="#00aa11">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Fotostartseiteneu.html">Fotos</a>
+              </font>
+              <br>
+              <font face="Arial" size="2">
+                Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
+              <br>
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td width="50%" height="200" bgcolor="#44aa00">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
+              </font>
+            </p>
+          </td>
+          <td width="50%" height="200" bgcolor="#337711">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="preisliste.html">Bestellung</a>
+              </font>
+              <br>
+              <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
                 <br>
-                <font face="Arial" size="2">
-                  Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
-                  <br>
-                </font>
-              </p></td>
-          </tr>
-          <tr>
-            <td width="50%" height="200" bgcolor="#44aa00">
-              <p align="center">
-                <font size="4" face="Arial">
-                  <a href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
-                </font>
-              </p></td>
-            <td width="50%" height="200" bgcolor="#337711">
-              <p align="center">
-                <font size="4" face="Arial">
-                  <a href="preisliste.html">Bestellung</a>
-                </font>
-                <br>
-                <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
-                  <br>
-                </font>
-              </p></td>
-          </tr>
-          <tr>
-            <td colspan="2" bgcolor=#009700">
-              <p align="middle" style="margin-right: 10px;">
-                <font size="3" color=#GG0000" face="Arial">
-                  <a href="linksammlung.html"> Linksammlung
-                </font>
-              </p></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" bgcolor=#009700">
+            <p align="middle" style="margin-right: 10px;">
+              <font size="3" color=#GG0000" face="Arial">
+                <a href="linksammlung.html"> Linksammlung
+              </font>
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
 </html>
