--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -51,7 +51,7 @@ td {vertical-align:center; overflow:hidden; }
           <p align="center"><font size="2" face="Arial">
 Poncirus trifoliatus, die Bitterorange, ist das einzige bei uns winterharte Zitrusgewächs.
 Ein enorm stacheliger Busch oder kleiner Baum mit sehr schönen weißen Blüten im April
-und bitteren Orangen im Herbst. 
+und bitteren Orangen sowie bronzener Laubfärbung im Herbst. 
  </font></p></td>
   <td width="175" height="180" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
