--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -76,7 +76,7 @@ und bitteren Orangen sowie bronzener Laubfärbung im Herbst.
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Exochorda x macrantha `The Bride´aus China wird 2m hoch und blüht schon im April an überhängenden 
-Zweigen sehr reich. Pflegeleicht! </font></p></td>
+Zweigen sehr reich. Pflegeleicht und langlebig! </font></p></td>
   <td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
     <img src="images/Exochorda.jpg" width="250" height="378" align="right"> 
