--- a/Sommer.html
+++ b/Sommer.html
@@ -86,13 +86,9 @@ empfehlenswert.
     <td width="300" height="200" bgcolor="#44aa00" valign="middle"
          <p align="right" style="margin-left: 10px;">
     <img src="images/Helianthemum-Ben-Affleck.JPG" width="185" height="170" align="left"> 
-    <img src="images/Helianth-red-orient.jpg" width="180" height="170"align="middle">    
     <img src="images/Helianthemum-Diana.JPG" width="180" height="170" align="middle"> 
-    </td>
-        
- <td width="173" height="200" bgcolor="#44aa00" valign="middle"
-          <p align="right" style="margin-right: 10px;">
-    <img src="images/Helianth-Renate.jpg" width="178" height="170" align="right"> 
+   <img src="images/Helianth-red-orient.jpg" width="180" height="170"align="middle">  
+   <img src="images/Helianth-Renate.jpg" width="178" height="170" align="right"> 
     </td>
  </tbody></table>
  
@@ -100,9 +96,9 @@ empfehlenswert.
  <tbody><tr>
         <td width="316" height="60" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Helianthemum `Ben Affeck´(links) ist eine besonders schöne zweifarbige Sorte der
-Sonnenröschen. Die auch aus England stammende Sorte `Diana´(Mitte unten - auf dem Foto leider etwas blaustichig)
-ist ebenfalls in der Mitte dunkler als am Rand. Die Sorte `Red Orient´ (Mitte oben) besticht durch ihre dunkle Farbe. 
+Helianthemum `Ben Affleck´(links) ist eine besonders schöne zweifarbige Sorte der
+Sonnenröschen. Die auch aus England stammende Sorte `Diana´(Mitte links - auf dem Foto leider etwas blaustichig)
+ist ebenfalls in der Mitte dunkler als am Rand. Die Sorte `Red Orient´ (Mitte rechts) besticht durch ihre dunkle Farbe. 
 `Renate´(rechts) ist eine eigene Züchtung in besonders intensiver Färbung.
 </tbody></table>
 
