Alle HTML Dateien umformatiert

--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -1,94 +1,79 @@
-<html><head>
-<meta http-equiv="Content-Language" content="de">
-<meta name="keywords" lang="de" content="Garten, Steingarten, Pflanzen, Versand, Verkauf">
-<meta name="description" lang="de" content="Christopfs Pflanzenparadies">
-<style type="text/css" media="all">@import "style.css";</style>
-<link rel="alternate stylesheet" type="text/css" media="screen" title="Grünes Design" href="Kontaktneu_Dateien/a">
-<link rel="alternate stylesheet" type="text/css" media="screen" title="Rotes Design" href="Kontaktneu_Dateien/a"><title>Kontakt</title></head>
-
-<body bgcolor="#99cc33" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
-
-
-<div id="uebersicht" align="center">
-
-
-<table border="0" width="500" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>Dr. Christoph Rohlfs
-    </b>
-    </font>
-          </p></td>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content="de" http-equiv="Content-Language">
+  <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
+  <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <style media="all" type="text/css">
+  @import "style.css";
+  </style>
+  <link href="Kontaktneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Grünes Design"
+  type="text/css">
+  <link href="Kontaktneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Rotes Design"
+  type="text/css">
+  <title>Kontakt</title>
+</head>
+<body alink="#FFFFFF" bgcolor="#99CC33" link="#FFCC99" onload="makesnake()" style="width: 100%;"
+text="#FFCC99" vlink="#FFCC99">
+  <div align="center" id="uebersicht">
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>Dr. Christoph Rohlfs</b></font></p>
+          </td>
         </tr>
-  <tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>Bitzerweg 6
-    </b>
-    </font>
-          </p></td>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>Bitzerweg 6</b></font></p>
+          </td>
         </tr>
-  <tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>53229 Bonn
-    </b>
-    </font>
-          </p></td>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>53229 Bonn</b></font></p>
+          </td>
         </tr>
-  
-  <tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>Tel.: (0228) 48 19 13 (abends)
-    </b>
-    </font>
-          </p></td>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>Tel.: (0228) 48 19 13
+            (abends)</b></font></p>
+          </td>
         </tr>
-<tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>Fax: (0228) 9086972
-          </b></font>
-          </p></td>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>Fax: (0228) 9086972</b></font></p>
+          </td>
         </tr>
-  <tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>e-mail: rohlfs.bonn(@)freenet.de
-    </b>
-    </font>
-          </p></td>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>e-mail:
+            rohlfs.bonn(@)freenet.de</b></font></p>
+          </td>
         </tr>
- </tbody></table>
- <p> </p>
- <p> </p>
-<table border="0" width="500" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="100%" bgcolor="#004700">
-          <p align="center"><font size="5" face="Arial">
-     <b>Datenschutz
-    </b>
-    </font>
-          </p></td>
-          <p> </p>
+      </tbody>
+    </table>
+    <p></p>
+    <p></p>
+    <p></p>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#004700" width="100%">
+            <p align="center"><font face="Arial" size="5"><b>Datenschutz</b></font></p>
+          </td>
         </tr>
-  <tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="3" face="Arial">
-     <b>Bei Kontaktaufnahme über E-Mail werden nur die von Ihnen angegebenen
-     Daten vorübergehend gespeichert und nach spätestens 3 Monaten gelöscht.
-     Sie werden nur zur Abwicklung der Bestellung oder Anfrage verwendet. 
-     Eine Weitergabe an Dritte ist ausgeschlossen. Cookies werden nicht gesetzt.
-    </b>
-    </font>
-          </p></td>
-       
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="3"><b>Bei Kontaktaufnahme über E-Mail werden
+            nur die von Ihnen angegebenen Daten vorübergehend gespeichert und nach spätestens 3
+            Monaten gelöscht. Sie werden nur zur Abwicklung der Bestellung oder Anfrage verwendet.
+            Eine Weitergabe an Dritte ist ausgeschlossen. Cookies werden nicht
+            gesetzt.</b></font></p>
+          </td>
         </tr>
-    
- </tbody></table>
-
-
-<p><a href="index.html">zurück zur Startseite</a></p>
-</div></body></html>
+      </tbody>
+    </table>
+    <p><a href="index.html">zurück zur Startseite</a></p>
+  </div>
+</body>
+</html>
