--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -1,178 +1,208 @@
-<html><head>
-<meta http-equiv="Content-Language" content="de">
-<meta name="keywords" lang="de" content="Garten, Steingarten, Pflanzen, Versand, Verkauf">
-<meta name="description" lang="de" content="Christopfs Pflanzenparadies">
-<style type="text/css" media="all">
-@import "style.css";
-body {background-color:#99cc33;}
-table {width:70%;border-style:non;}
-td {vertical-align:center; overflow:hidden;}
-</style><title>Christophs Fotos</title></head>
-
-<body background="images/Cistus-bg.jpg" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
-
-<div id="uebersicht" align="center">
-
-<div id="sonstnoch" align="center">
-<table border="0" width="500" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-  <td align="center" width="660" bgcolor="#007700" height="80">
-        <font face="Arial"><font size="6">Zistrosen</font>
-</font></td>
-        </tr>
- </tbody></table>
-
-<p>
-<table border="0" height="30" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="500" height="30" bgcolor="#44aa00">
-          <p align="center"></p></td>
-        </tr>
- </tbody></table>
-    <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-   <td width="196" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Cistus-creticus.JPG" width="194" height="196" align="left"> 
-    </p></td>
-  <td width="284" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cistus creticus mit rosa Blüten und silbrigen Blättern ist als junge
-Pflanze ziemlich winterhart, man sollte stets für Nachzucht sorgen. Die
-Blütenfarbe läßt sich nur schwer kombinieren. </font></p></td>
-        </tr>
- </tbody></table>
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-        <td width="320" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus monspeliensis hat sehr viele kleine Blüten; nicht sicher winterhart. Die Samen 
-    für meine Pflanzen stammen von den Kanaren, aber auch Pflanzen aus dem Mittelmeerraum
-    kommen hier oft nicht durch den Winter. Die  Winter 2006-2008 ging alles gut, 2009 starb viel ab.
-    
-    </font></p></td>
-  <td width="145" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-    <img src="images/Cistus-monspeliensis.JPG" width="145" height="205" align="right"> 
-    </p></td>
-</tr></tbody></table>
-
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="163" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Cistus-ladanifer.JPG" width="200" height="185" align="left">
-    </p></td>
-  <td width="337" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cistus ladanifer aus Spanien hat die prächtigsten Blüten aller
-Zistrosen.Es wurde oft in Hybriden eingekreuzt. Obwohl  5
-Winter ohne Schutz gut vertragen wurden, stelle ich immer zur
-Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen schwere Schäden. 
-Samen setzen die Pflanzen bei mir im Gegensatz zur Natur nur ganz selten an.</font></p></td>
-                  </tr>  
-</tbody></table>
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="331" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus salviifolius habe ich als aufrecht wachsenden Busch aus den Bergen
-     der Toscana. Die meisten Pflanzen haben in den letzten 12 Jahren überlebt
-     und blühen sehr reich, der Januar 2009 ließ aber viele Pflanzen absterben. 
-    </font></p></td>
-  <td width="169" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-     <img src="images/Cistus-salviifolius.JPG" width="175" height="195" align="right">  
-    </p></td>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content="de" http-equiv="Content-Language">
+  <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
+  <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <style media="all" type="text/css">
+  @import "style.css";
+  body {background-color:#99cc33;}
+  table {width:70%;border-style:non;}
+  td {vertical-align:center; overflow:hidden;}
+  </style>
+  <title>Christophs Fotos</title>
+</head>
+<body alink="#FFFFFF" background="images/Cistus-bg.jpg" link="#FFCC99" onload="makesnake()" style=
+"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+  <div align="center" id="uebersicht">
+    <div align="center" id="sonstnoch">
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td align="center" bgcolor="#007700" height="80" width="660"><font face=
+            "Arial"><font size="6">Zistrosen</font></font></td>
           </tr>
-</tbody></table>
-
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="275" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/cistros.jpg" width="275" height="200" align="left"> 
-    </p></td>
-  <td width="225" height="200" bgcolor="#44aa00" valign="middle">
-           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Hier noch einmal 3 Zistrosen zum Größenvergleich:links C. ladanifer,
-rechts oben C. salviifolius und rechts unten C. monspeliensis. </font></p></td>
-        </tr>
-</tbody></table>
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="331" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus populifolius kommt von Südfrankreich bis nach Portugal vor. Die reinweißen
-  Blüten wirken sehr edel porzellanartig. Die Winterhärte ist erstaunlich gut. Den Winter 2010/11 hat sie besser als
-die meisten anderen Arten  überstanden.
-  
-    </font></p></td>
-  <td width="169" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-     <img src="images/Cistus-populifolius.JPG" width="230" height="146" align="right">  
-    </p></td>
+        </tbody>
+      </table>
+      <p></p>
+      <table border="0" cellpadding="0" cellspacing="0">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="30" width="500">
+              <p align="center"></p>
+            </td>
           </tr>
-          <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="331" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus psilosepalus ähnelt in der Blüte C. monspeliensis .Frei ausgepflanzte Exemplare 
-überstanden den Januar 2009 nicht, im kalten Kasten haben sie ohne Schaden überlebt.
-Die letzten Winter wurden sehr gut überstanden.
-    </font></p></td>
-  <td width="169" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-     <img src="images/Cistus-psilosepalus.jpg" width="300" height="255" align="right">  
-    </p></td>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="196">
+              <p align="right" style="margin-left: 10px;"><img align="left" height="196" src=
+              "images/Cistus-creticus.JPG" width="194"></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="284">
+              <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Cistus
+              creticus mit rosa Blüten und silbrigen Blättern ist als junge Pflanze ziemlich
+              winterhart, man sollte stets für Nachzucht sorgen. Die Blütenfarbe läßt sich nur
+              schwer kombinieren.</font></p>
+            </td>
           </tr>
-</tbody></table>
-</tbody></table>
-<table border="0" width="500" height="30" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="500" height="30" bgcolor="#44aa00">
-          <p align="center"></p></td>
-        </tr>
- </tbody></table>
- 
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="275" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Cistussalviipicos.jpg" width="300" height="286" align="left"> 
-    </p></td>
-  <td width="225" height="200" bgcolor="#44aa00" valign="middle">
-           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-In den Picos de Europa in Nordspanien fand ich diesen Typ von  Cistus salviifolius  Er wächst nicht aufrecht, sondern mehr kriechend.
-Nicht immer zuverlässig hart.
- </font></p></td>
-        </tr>
-</tbody></table>
-
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="331" height="200" bgcolor="#44aa00" valign="middle">
-         <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus albidus aus dem westlichen Mittelmeerraum mit weißfilzigen Blättern ähnelt etwas C. creticus.
-    </font></p></td>
-  <td width="169" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-     <img src="images/cistus-albidus.jpg" width="300" height="277" align="right">  
-    </p></td>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="320">
+              <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
+              monspeliensis hat sehr viele kleine Blüten; nicht sicher winterhart. Die Samen für
+              meine Pflanzen stammen von den Kanaren, aber auch Pflanzen aus dem Mittelmeerraum
+              kommen hier oft nicht durch den Winter. Die Winter 2006-2008 ging alles gut, 2009
+              starb viel ab.</font></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="145">
+              <p align="left" style="margin-right: 10px;"><img align="right" height="205" src=
+              "images/Cistus-monspeliensis.JPG" width="145"></p>
+            </td>
           </tr>
-</tbody></table>
-
- <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="275" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Cistbusch.jpg" width="400" height="308" align="left"> 
-    </p></td>
-  <td width="225" height="200" bgcolor="#44aa00" valign="middle">
-           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cistus salviifolius in der aufrechten Form aus der Toskana.
- </font></p></td>
-        </tr>
-</tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
-</p></div></div></body></html>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="163">
+              <p align="right" style="margin-left: 10px;"><img align="left" height="185" src=
+              "images/Cistus-ladanifer.JPG" width="200"></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="337">
+              <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Cistus
+              ladanifer aus Spanien hat die prächtigsten Blüten aller Zistrosen.Es wurde oft in
+              Hybriden eingekreuzt. Obwohl 5 Winter ohne Schutz gut vertragen wurden, stelle ich
+              immer zur Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen
+              schwere Schäden. Samen setzen die Pflanzen bei mir im Gegensatz zur Natur nur ganz
+              selten an.</font></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="331">
+              <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
+              salviifolius habe ich als aufrecht wachsenden Busch aus den Bergen der Toscana. Die
+              meisten Pflanzen haben in den letzten 12 Jahren überlebt und blühen sehr reich, der
+              Januar 2009 ließ aber viele Pflanzen absterben.</font></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="169">
+              <p align="left" style="margin-right: 10px;"><img align="right" height="195" src=
+              "images/Cistus-salviifolius.JPG" width="175"></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="275">
+              <p align="right" style="margin-left: 10px;"><img align="left" height="200" src=
+              "images/cistros.jpg" width="275"></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="225">
+              <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Hier noch
+              einmal 3 Zistrosen zum Größenvergleich:links C. ladanifer, rechts oben C.
+              salviifolius und rechts unten C. monspeliensis.</font></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="331">
+              <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
+              psilosepalus ähnelt in der Blüte C. monspeliensis .Frei ausgepflanzte Exemplare
+              überstanden den Januar 2009 nicht, im kalten Kasten haben sie ohne Schaden überlebt.
+              Die letzten Winter wurden sehr gut überstanden.</font></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="169">
+              <p align="left" style="margin-right: 10px;"><img align="right" height="255" src=
+              "images/Cistus-psilosepalus.jpg" width="300"></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="331">
+              <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
+              populifolius kommt von Südfrankreich bis nach Portugal vor. Die reinweißen Blüten
+              wirken sehr edel porzellanartig. Die Winterhärte ist erstaunlich gut. Den Winter
+              2010/11 hat sie besser als die meisten anderen Arten überstanden.</font></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="169">
+              <p align="left" style="margin-right: 10px;"><img align="right" height="146" src=
+              "images/Cistus-populifolius.JPG" width="230"></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="30" width="500">
+              <p align="center"></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="275">
+              <p align="right" style="margin-left: 10px;"><img align="left" height="286" src=
+              "images/Cistussalviipicos.jpg" width="300"></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="225">
+              <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">In den
+              Picos de Europa in Nordspanien fand ich diesen Typ von Cistus salviifolius Er wächst
+              nicht aufrecht, sondern mehr kriechend. Nicht immer zuverlässig hart.</font></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="331">
+              <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
+              albidus aus dem westlichen Mittelmeerraum mit weißfilzigen Blättern ähnelt etwas C.
+              creticus.</font></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="169">
+              <p align="left" style="margin-right: 10px;"><img align="right" height="277" src=
+              "images/cistus-albidus.jpg" width="300"></p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table border="0" cellpadding="0" cellspacing="0" width="500">
+        <tbody>
+          <tr>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="275">
+              <p align="right" style="margin-left: 10px;"><img align="left" height="308" src=
+              "images/Cistbusch.jpg" width="400"></p>
+            </td>
+            <td bgcolor="#44AA00" height="200" valign="middle" width="225">
+              <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Cistus
+              salviifolius in der aufrechten Form aus der Toskana.</font></p>
+            </td>
+          </tr>
+        </tbody>
+      </table><a href="index.html">zurück zur Startseite</a> <a href=
+      "Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+    </div>
+  </div>
+</body>
+</html>
