--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -1,152 +1,172 @@
-<html><head>
-<meta http-equiv="Content-Language" content="de">
-<meta name="keywords" lang="de" content="Garten, Steingarten, Pflanzen, Versand, Verkauf">
-<meta name="description" lang="de" content="Christopfs Pflanzenparadies">
-<style type="text/css" media="all">
-@import "style.css";
-body {background-color:#99cc33;}
-table {width:800;border-style:non;}
-td {vertical-align:center; overflow:hidden; }
-</style><title>Christophs Pflanzenparadies - Fotos</title></head>
-
-<body background="images/Background.jpg" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
-
-<div id="uebersicht" align="center">
-<p><a href="index.html"> zurück zur Startseite</a></p>
-<table height="60" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="100%" bgcolor="#007700">
-          <p align="center"><font size="4" face="Arial">
-     Hier geht es zu den Fotos!
-    Der Übersichtlichkeit halber gibt es mehrere Kategorien:
-    </font>
-          </p></td>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content="de" http-equiv="Content-Language">
+  <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
+  <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <style media="all" type="text/css">
+  @import "style.css";
+  body {background-color:#99cc33;}
+  table {width:800;border-style:non;}
+  td {vertical-align:center; overflow:hidden; }
+  </style>
+  <title>Christophs Pflanzenparadies - Fotos</title>
+</head>
+<body alink="#FFFFFF" background="images/Background.jpg" link="#FFCC99" onload="makesnake()" style=
+"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+  <div align="center" id="uebersicht">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <table cellpadding="0" cellspacing="0">
+      <tbody>
+        <tr>
+          <td bgcolor="#007700" width="100%">
+            <p align="center"><font face="Arial" size="4">Hier geht es zu den Fotos! Der
+            Übersichtlichkeit halber gibt es mehrere Kategorien:</font></p>
+          </td>
         </tr>
- </tbody></table>
-
-<p>
-
-    <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-      <tbody><tr>
-        <td width="678" height="150" bgcolor="#00aa11">
-          <p align="center"><font size="4" face="Arial"><a href="Fruehjahr.html">
-    Steingartenpflanzen für das Frühjahr</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#00aa11">
-          <p align="right">
-    <img src="images/Iris-Rand.jpg" height="150" align="middle"> 
-    </p></td>
-    </tr>
-</tbody></table>
-
-  <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-        <td width="678" height="150" bgcolor="#448800">
-          <p align="center"><font size="4" face="Arial"><a href="Sommer.html">
-    Steingartenpflanzen für Sommer und Herbst</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#448800">
-          <p align="right">
-    <img src="images/CROCUSS-Rand.jpg" height="150" align="middle"> 
-    </p></td>
-  </tr>
-</tbody></table>
- <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-      <tbody><tr>
-        <td width="678" height="150" bgcolor="#00aa11">
-          <p align="center"><font size="4" face="Arial"><a href="Campanulaceae.html">
-    Glockenblumen und Verwandte</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#00aa11">
-          <p align="right">
-    <img src="images/Campanula-saxifraga-Rand.jpg" height="150" align="middle"> 
-    </p></td>
-    </tr>
-</tbody></table>
-<table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-   <td width="678" height="150" bgcolor="#007700">
-          <p align="center"><font size="4" face="Arial"><a href="Schattenpflanzen.html">
-    Pflanzen für Schatten</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#007700">
-          <p align="right">
-    <img src="images/Glaucidium-palmatum-Rand.jpg" height="150" align="middle">
-    </p></td>
-  </tr>
-</tbody></table>
- <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-        <td width="678" height="150" bgcolor="#337700">
-          <p align="center"><font size="4" face="Arial"><a href="Zistrosen.html">
-    Zistrosen</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#337700">
-          <p align="right">
-    <img src="images/Cistus-ladanifer-Rand.jpg" height="150" align="middle"> 
-    </p></td>
-  </tr>
-    </tbody></table>
-    
-<table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-   <td width="678" height="150" bgcolor="#44aa00">
-          <p align="center"><font size="4" face="Arial"><a href="Cyclamen.html">
-    Cyclamen</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#44aa00">
-          <p align="right">
-    <img src="images/Cyc-hederi-dunkel-Rand.jpg" height="150" align="middle">
-    </p></td>
-  </tr>
-</tbody></table>
- <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-        <td width="678" height="150" bgcolor="#337711">
-          <p align="center"><font size="4" face="Arial"><a href="Kalthauspflanzen.html">
-    Pflanzen fürs Kalthaus</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#337711">
-          <p align="right">
-    <img src="images/Fremontodendron-Rand.jpg" height="150" align="middle"> 
-    </p></td>
-  </tr>
-    </tbody></table>
-    <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-   <td width="678" height="150" bgcolor="#44aa00">
-          <p align="center"><font size="4" face="Arial"><a href="androsace_und_daphne.html">
-    Androsace und Daphne</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#44aa00">
-          <p align="right">
-    <img src="images/Daphne-arbuscula-Rand.jpg" height="150" align="middle">
-    </p></td>
-  </tr>
-</tbody></table>
-<table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-   <td width="678" height="150" bgcolor="#337711">
-          <p align="center"><font size="4" face="Arial"><a href="nelken.html">
-    Nelken</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#337711">
-          <p align="right">
-    <img src="images/Dianthus-Bodensee-Rand.jpg" height="150" align="middle">
-    </p></td>
-  </tr>
-</tbody></table>
-<table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
-  <tbody><tr>
-   <td width="678" height="150" bgcolor="#00aa11">
-          <p align="center"><font size="4" face="Arial"><a href="andere_pflanzen.html">
-    andere Pflanzen</a>
-    </font></p></td>
-  <td width="122" height="150" bgcolor="#00aa11">
-          <p align="right">
-    <img src="images/Cercis-siliquastrum-Rand.jpg" height="150" align="middle">
-    </p></td>
-  </tr>
-</tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a></p>
-</div></body></html>
+      </tbody>
+    </table>
+    <p></p>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#00AA11" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "Fruehjahr.html">Steingartenpflanzen für das Frühjahr</a></font></p>
+          </td>
+          <td bgcolor="#00AA11" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src="images/Iris-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#448800" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href="Sommer.html">Steingartenpflanzen
+            für Sommer und Herbst</a></font></p>
+          </td>
+          <td bgcolor="#448800" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src="images/CROCUSS-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#00AA11" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "Campanulaceae.html">Glockenblumen und Verwandte</a></font></p>
+          </td>
+          <td bgcolor="#00AA11" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Campanula-saxifraga-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#007700" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href="Schattenpflanzen.html">Pflanzen
+            für Schatten</a></font></p>
+          </td>
+          <td bgcolor="#007700" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Glaucidium-palmatum-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#337700" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "Zistrosen.html">Zistrosen</a></font></p>
+          </td>
+          <td bgcolor="#337700" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Cistus-ladanifer-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "Cyclamen.html">Cyclamen</a></font></p>
+          </td>
+          <td bgcolor="#44AA00" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Cyc-hederi-dunkel-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#337711" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href="Kalthauspflanzen.html">Pflanzen
+            fürs Kalthaus</a></font></p>
+          </td>
+          <td bgcolor="#337711" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Fremontodendron-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "androsace_und_daphne.html">Androsace und Daphne</a></font></p>
+          </td>
+          <td bgcolor="#44AA00" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Daphne-arbuscula-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#337711" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "nelken.html">Nelken</a></font></p>
+          </td>
+          <td bgcolor="#337711" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Dianthus-Bodensee-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+      <tbody>
+        <tr>
+          <td bgcolor="#00AA11" height="150" width="678">
+            <p align="center"><font face="Arial" size="4"><a href="andere_pflanzen.html">andere
+            Pflanzen</a></font></p>
+          </td>
+          <td bgcolor="#00AA11" height="150" width="122">
+            <p align="right"><img align="middle" height="150" src=
+            "images/Cercis-siliquastrum-Rand.jpg"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <p></p>
+    <p><a href="index.html">zurück zur Startseite</a></p>
+  </div>
+</body>
+</html>
