--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -1,138 +1,146 @@
-<html><head>
-<meta http-equiv="Content-Language" content="de">
-<meta name="keywords" lang="de" content="Garten, Steingarten, Pflanzen, Versand, Verkauf">
-<meta name="description" lang="de" content="Christopfs Pflanzenparadies">
-<style type="text/css" media="all">
-@import "style.css";
-body {background-color:#99cc33;}
-table {width:70%;border-style:non;}
-td {vertical-align:center; overflow:hidden; }
-</style><title>andere interessante Gartenpflanzen</title></head>
-
-<body background="images/Nepeta-cubanica-bg.jpg" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
-
-<div id="uebersicht" align="center">
-
-<table border="0" width="500" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-  <td align="center" width="660" bgcolor="#007700" height="80">
-        <font face="Arial"><font size="6">andere interessante Pflanzen</font>
-</font></td>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content="de" http-equiv="Content-Language">
+  <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
+  <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <style media="all" type="text/css">
+  @import "style.css";
+  body {background-color:#99cc33;}
+  table {width:70%;border-style:non;}
+  td {vertical-align:center; overflow:hidden; }
+  </style>
+  <title>andere interessante Gartenpflanzen</title>
+</head>
+<body alink="#FFFFFF" background="images/Nepeta-cubanica-bg.jpg" link="#FFCC99" onload=
+"makesnake()" style="width: 100%;" text="#FFCC99" vlink="#FFCC99">
+  <div align="center" id="uebersicht">
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
+          "Arial"><font size="6">andere interessante Pflanzen</font></font></td>
         </tr>
- </tbody></table>
-
-<p>
-<table border="0" width="500" height="30" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="500" height="30" bgcolor="#44aa00">
-          <p align="center"></p></td>
+      </tbody>
+    </table>
+    <p></p>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="30" width="500">
+            <p align="center"></p>
+          </td>
         </tr>
- </tbody></table><table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-    <td width="173" height="200" bgcolor="#44aa00" valign="middle&gt;
-          &lt;p align=" right="" style="margin-left: 10px;">
-    <img src="images/Cercis-siliquastrum.JPG" width="300" height="355" align="left"> 
-    </td>
-  <td width="327" height="200" bgcolor="#44aa00" valign="middle">
-   Cercis siliquastrum, der Judasbaum, ist im gesamten Mittelmeerraum weit verbreitet. Wegen
-   seiner schönen Blüte auch bei uns empfehlenswert. Im Weinbauklima völlig winterhart.
-   Ganz ähnlich und auch hart sind C. chinensis und C. canadensis.
- </font></p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
+          "middle&gt; &lt;p align=" width="173"><img align="left" height="355" src=
+          "images/Cercis-siliquastrum.JPG" width="300"></td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="327">Cercis siliquastrum, der
+          Judasbaum, ist im gesamten Mittelmeerraum weit verbreitet. Wegen seiner schönen Blüte
+          auch bei uns empfehlenswert. Im Weinbauklima völlig winterhart. Ganz ähnlich und auch
+          hart sind C. chinensis und C. canadensis.</td>
         </tr>
- </tbody></table>
-
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-  <td width="283" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Poncirus-trifoliatus2.JPG" width="280" height="322" align="left"> 
-    </p></td>
-          <td width="250" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center"><font size="2" face="Arial">
-Poncirus trifoliatus, die Bitterorange, ist das einzige bei uns winterharte Zitrusgewächs.
-Ein enorm stacheliger Busch oder kleiner Baum mit sehr schönen weißen Blüten im April
-und bitteren Orangen sowie bronzener Laubfärbung im Herbst. 
- </font></p></td>
-  <td width="175" height="180" bgcolor="#44aa00" valign="middle">
-          <p align="left" style="margin-right: 10px;">
-     <img src="images/Poncirus-Bluete.JPG" width="259" height="237" align="right">  
-    </p></td>
-          </tr>
-</tbody></table>
-</table><table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-    <td width="173" height="200" bgcolor="#44aa00" valign="middle&gt;
-          &lt;p align=" right="" style="margin-left: 10px;">
-    <img src="images/Poncirus-trifoliatus.JPG" width="300" height="255" align="left"> 
-    </td>
-  <td width="327" height="200" bgcolor="#44aa00" valign="middle">
-   Im September werden die bitteren Früchte gelb. Das Laub färbt sich kupferfarben-orange-gelb.
- </font></p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="283">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="322" src=
+            "images/Poncirus-trifoliatus2.JPG" width="280"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="250">
+            <p align="center"><font face="Arial" size="2">Poncirus trifoliatus, die Bitterorange,
+            ist das einzige bei uns winterharte Zitrusgewächs. Ein enorm stacheliger Busch oder
+            kleiner Baum mit sehr schönen weißen Blüten im April und bitteren Orangen sowie
+            bronzener Laubfärbung im Herbst.</font></p>
+          </td>
+          <td bgcolor="#44AA00" height="180" valign="middle" width="175">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="237" src=
+            "images/Poncirus-Bluete.JPG" width="259"></p>
+          </td>
         </tr>
- </tbody></table>
-
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="300" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Exochorda x macrantha `The Bride´aus China wird 2m hoch und blüht schon im April an überhängenden 
-Zweigen sehr reich. Pflegeleicht und langlebig! </font></p></td>
-  <td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
-         <p align="left" style="margin-right: 10px;">
-    <img src="images/Exochorda.jpg" width="250" height="378" align="right"> 
-    </p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
+          "middle&gt; &lt;p align=" width="173"><img align="left" height="255" src=
+          "images/Poncirus-trifoliatus.JPG" width="300"></td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="327">Im September werden die
+          bitteren Früchte gelb. Das Laub färbt sich kupferfarben-orange-gelb.</td>
         </tr>
-</tbody></table>
-
-
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="233" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Paeonia-campessedesii.JPG" width="350" height="323" align="left"> 
-    </p></td>
-  <td width="267" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Paeonia cambessedesii ist in ihrer Heimat Mallorca selten geworden. Diese aus Samen in Freien 
-gezogene Pflanze blühte nach 4 Jahren zum ersten Mal. Sie wird nur 40cm hoch und
- soll nicht ganz winterhart sein, was ich bisher nicht bestätigen kann.     
- 
- </font></p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="300">
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Exochorda x
+            macrantha `The Bride´aus China wird 2m hoch und blüht schon im April an überhängenden
+            Zweigen sehr reich. Pflegeleicht und langlebig!</font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="329">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="378" src=
+            "images/Exochorda.jpg" width="250"></p>
+          </td>
         </tr>
-</tbody></table>
-    
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
-<tbody><tr>
-  <td width="233" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="right" style="margin-left: 10px;">
-    <img src="images/Paeonia-campesse.jpg" width="350" height="310" align="left"> 
-    </p></td>
-  <td width="267" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Im Aufblühen sieht die ungefüllte Blüte mit den goldenen Staubgefässen besonders schön aus.     
- 
- </font></p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="233">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="323" src=
+            "images/Paeonia-campessedesii.JPG" width="350"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="267">
+            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Paeonia
+            cambessedesii ist in ihrer Heimat Mallorca selten geworden. Diese aus Samen in Freien
+            gezogene Pflanze blühte nach 4 Jahren zum ersten Mal. Sie wird nur 40cm hoch und soll
+            nicht ganz winterhart sein, was ich bisher nicht bestätigen kann.</font></p>
+          </td>
         </tr>
-</tbody></table>
- 
-
-<table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
- <tbody><tr>
-       <td width="300" height="200" bgcolor="#44aa00" valign="middle">
-          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Crocosmis crocosmiflora, besser bekannt unter dem Namen Montbretie, galt früher als frostfrei zu überwinternde
-Kübelpflanze. Meine Pflanzen haben den Januar 2009 bei -14°C mit nur geringen Schäden im Garten frei 
-ausgepflanzt, aber sehr trocken gehalten, überstanden. 
- </font></p></td>
-  <td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
-         <p align="left" style="margin-right: 10px;">
-    <img src="images/Crocosmia-crocosmiflora.JPG" width="300" height="311" align="right"> 
-    </p></td>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="233">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="310" src=
+            "images/Paeonia-campesse.jpg" width="350"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="267">
+            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Im Aufblühen
+            sieht die ungefüllte Blüte mit den goldenen Staubgefässen besonders schön
+            aus.</font></p>
+          </td>
         </tr>
-</tbody></table>
- 
- 
-
-
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
-</p></div></body></html>
+      </tbody>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="300">
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Crocosmis
+            crocosmiflora, besser bekannt unter dem Namen Montbretie, galt früher als frostfrei zu
+            überwinternde Kübelpflanze. Meine Pflanzen haben den Januar 2009 bei -14°C mit nur
+            geringen Schäden im Garten frei ausgepflanzt, aber sehr trocken gehalten,
+            überstanden.</font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="329">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="311" src=
+            "images/Crocosmia-crocosmiflora.JPG" width="300"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück
+    zur Fotoübersicht</a>
+  </div>
+</body>
+</html>
