--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Language" content="de">
-  <meta name="keywords" lang="de" content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf">
-  <meta name="description" lang="de" content="Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs">
-  <style type="text/css" media="all">
+  <meta content="de" http-equiv="Content-Language">
+  <meta content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf"
+  lang="de" name="keywords">
+  <meta content=
+  "Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs"
+  lang="de" name="description">
+  <style media="all" type="text/css">
   .imgstyle {
     position: absolute;
     visibility: visible;
@@ -39,84 +43,65 @@
   td {
     padding: 20px;
   }
-</style>
-<title>Der Steingärtner</title>
+  </style>
+  <title>Der Steingärtner</title>
 </head>
 <body>
-  <div id="uebersicht" align="center">
+  <div align="center" id="uebersicht">
     <table>
       <tbody>
         <tr>
           <td class="title" colspan="2">Der Steingärtner</td>
         </tr>
         <tr>
-          <td colspan="2" width="100%" bgcolor="#007700">
-            <p align="left" style="margin-right: 10px;">
-              <font size="3" face="Arial"> Willkommen auf meiner Homepage!
-              </font>
-            </p>
-            <p align="left" style="margin-right: 10px;">
-              <font size="3" face="Arial"> Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.
-              </font>
-            </p>
-            <p align="left" style="margin-right: 10px;">
-              <font size="3" face="Arial"> Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs
-              </font>
-            </p>
-            <p align="left" style="margin-right: 10px;">
-              <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
-              </font>
-            </p>
+          <td bgcolor="#007700" colspan="2" width="100%">
+            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Willkommen auf
+            meiner Homepage!</font></p>
+            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Als
+            begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten
+            geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber
+            in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und
+            Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht
+            entfalten.</font></p>
+            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Im Hauptberuf
+            bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn,
+            allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am
+            Stadtrand. Mein Name: Dr. Christoph Rohlfs</font></p>
+            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Androsace,
+            Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula,
+            Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in
+            meinem Garten.</font></p>
           </td>
         </tr>
         <tr>
-          <td width="50%" height="200" bgcolor="#448800">
-            <p align="center">
-              <font size="4" face="Arial">
-                <a href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
-              </font>
-            </p>
+          <td bgcolor="#448800" height="200" width="50%">
+            <p align="center"><font face="Arial" size="4"><a href="Tipsneu.html">Tips, Tricks und
+            Pflegeanleitungen</a></font></p>
           </td>
-          <td width="50%" height="200" bgcolor="#00aa11">
-            <p align="center">
-              <font size="4" face="Arial">
-                <a href="Fotostartseiteneu.html">Fotos</a>
-              </font>
-              <br>
-              <font face="Arial" size="2">
-                Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
-              <br>
-              </font>
-            </p>
+          <td bgcolor="#00AA11" height="200" width="50%">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "Fotostartseiteneu.html">Fotos</a></font><br>
+            <font face="Arial" size="2">Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem
+            gibt es Fotos von Steingartenpflanzen zu sehen<br></font></p>
           </td>
         </tr>
         <tr>
-          <td width="50%" height="200" bgcolor="#44aa00">
-            <p align="center">
-              <font size="4" face="Arial">
-                <a href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
-              </font>
-            </p>
+          <td bgcolor="#44AA00" height="200" width="50%">
+            <p align="center"><font face="Arial" size="4"><a href="Kontaktneu.html">Kontakt,
+            Impressum, Datenschutz</a></font></p>
           </td>
-          <td width="50%" height="200" bgcolor="#337711">
-            <p align="center">
-              <font size="4" face="Arial">
-                <a href="preisliste.html">Bestellung</a>
-              </font>
-              <br>
-              <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
-                <br>
-              </font>
-            </p>
+          <td bgcolor="#337711" height="200" width="50%">
+            <p align="center"><font face="Arial" size="4"><a href=
+            "preisliste.html">Bestellung</a></font><br>
+            <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen
+            Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum
+            Bestellformular<br></font></p>
           </td>
         </tr>
         <tr>
-          <td colspan="2" bgcolor=#009700">
-            <p align="middle" style="margin-right: 10px;">
-              <font size="3" color=#GG0000" face="Arial">
-                <a href="linksammlung.html"> Linksammlung
-              </font>
-            </p>
+          <td bgcolor="#009700&quot;" colspan="2">
+            <p align="middle" style="margin-right: 10px;"><font color="#GG0000&quot;" face="Arial"
+            size="3"><a href="linksammlung.html">Linksammlung</a></font></p>
           </td>
         </tr>
       </tbody>
